<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pes.agorapp.activities.LoginActivity"
    android:background="@drawable/gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"/>

        <ImageView
            android:clickable="true"
            android:layout_height="80dp"
            android:layout_width="240dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:background="@drawable/agorapp"
            android:id="@+id/logoSplash"
            android:layout_marginBottom="60dp"
            />

        <Button
            android:layout_height="20dp"
            android:id="@+id/btn_catala_lang"
            android:text="@string/lang_cat"
            android:enabled="true"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            style="@style/Button_Images"
            android:drawableLeft="@drawable/catalunya_flag"/>

        <Button
            android:layout_height="20dp"
            android:id="@+id/btn_english_lang"
            android:text="@string/lang_eng"
            android:enabled="true"
            android:layout_weight="1"
            android:layout_width="match_parent"
            style="@style/Button_Images"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/england_flag"/>

        <Button
            android:layout_height="20dp"
            android:id="@+id/btn_espanol_lang"
            android:text="@string/lang_esp"
            android:enabled="true"
            android:layout_weight="1"
            android:layout_width="match_parent"
            style="@style/Button_Images"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/espana_flag"/>

        <Button
            android:id="@+id/btn_enter_lang"
            android:text="@string/start"
            android:textStyle="bold"
            android:backgroundTint="@color/secondaryColor"
            android:textColor="@color/tw__solid_white"
            android:enabled="true"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_marginTop="75dp"
            android:layout_height="30dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"/>

    </LinearLayout>
</RelativeLayout>